[project]
name = "reasoningwithtextandimage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate==1.12.0",
    "aiofiles==24.1.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.3",
    "aiosignal==1.4.0",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "attrs==25.4.0",
    "audioop-lts==0.2.2",
    "av==16.1.0",
    "bitsandbytes==0.49.1",
    "brotli==1.2.0",
    "certifi==2026.1.4",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "colorama==0.4.6",
    "cryptography==46.0.4",
    "dashscope==1.25.11",
    "distro==1.9.0",
    "einops==0.8.2",
    "fastapi==0.128.1",
    "ffmpy==1.0.0",
    "filelock==3.20.3",
    "frozenlist==1.8.0",
    "fsspec==2026.1.0",
    "gradio==6.5.1",
    "gradio-client==2.0.3",
    "groovy==0.1.2",
    "h11==0.16.0",
    "hf-xet==1.2.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==1.4.0",
    "idna==3.11",
    "jinja2==3.1.6",
    "jiter==0.13.0",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "multidict==6.7.1",
    "networkx==3.6.1",
    "numpy==2.4.2",
    "openai==2.17.0",
    "orjson==3.11.7",
    "packaging==26.0",
    "pandas==3.0.0",
    "pillow==12.1.0",
    "propcache==0.4.1",
    "psutil==7.2.2",
    "pycparser==3.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydub==0.25.1",
    "pygments==2.19.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "python-multipart==0.0.22",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "qwen-vl-utils==0.0.14",
    "regex==2026.1.15",
    "requests==2.32.5",
    "rich==14.3.2",
    "safehttpx==0.1.7",
    "safetensors==0.7.0",
    "semantic-version==2.10.0",
    "sentencepiece==0.2.1",
    "setuptools==80.10.2",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "starlette==0.50.0",
    "sympy==1.14.0",
    "tokenizers==0.22.2",
    "tomlkit==0.13.3",
    "torch==2.10.0+cu128",
    "torchvision==0.25.0+cu128",
    "tqdm==4.67.3",
    "transformers==5.0.0",
    "typer==0.21.1",
    "typer-slim==0.21.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.3",
    "urllib3==2.6.3",
    "uvicorn==0.40.0",
    "websocket-client==1.9.0",
    "yarl==1.22.0",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
